# trunk

./: .gitignore  README.md  future_optimize.txt  package-lock.json  package.json  postcss.config.cjs
.github/workflows/: rust.yml
admin/: Cargo.toml
admin/src/: accept_cf.rs  accept_dreg.rs  admin_http.rs  admin_ws.rs  carform_upload.rs  deny_cf.rs  deny_dreg.rs  driver_register.rs  live_chat.rs  main.rs  structures.rs
backend/: Cargo.toml
backend/.github/workflows/: rust.yml
backend/src/: extra.rs  fetch.rs  gen_salt.rs  implementations.rs  main.rs  structures.rs  wsserver.rs
backend/src/acc/: car.rs  driver.rs  mod.rs
backend/src/auth/: delete.rs  login.rs  mod.rs  signup.rs
backend/src/extra/: functions.rs  gen_salt.rs  implementations.rs  mod.rs  structures.rs
backend/src/fetch/: ava_cars.rs  car.rs  driver.rs  mod.rs  nf.rs  noti.rs  package.rs  scope.rs  user.rs
backend/src/post/: ava_car.rs  car.rs  driver.rs  mod.rs  package.rs
backend/src/services/: acbooking.rs  booking.rs  booknoti.rs  dcaraccpt.rs  dcarapt.rs  dcardny.rs  dcarnoti.rs  dnbooking.rs  feedbacks.rs  ganoti.rs  getcargos.rs  mod.rs  notinit.rs  voting.rs
backend/src/structures/: auth.rs  bookstruct.rs  car.rs  dbstruct.rs  extrastruct.rs  mod.rs  package.rs  post.rs  structures.rs  votestruct.rs  wsstruct.rs
flutter-car-gate/: README.md  pubspec.yaml
flutter-car-gate/android/app/: build.gradle
flutter-car-gate/ios/Runner/: Info.plist
flutter-car-gate/ios/Runner.xcodeproj/: project.pbxproj
flutter-car-gate/lib/: main.dart
flutter-car-gate/lib/constant/: colors.dart
flutter-car-gate/lib/screens/login_screen/: login_screen.dart
flutter-car-gate/test/: widget_test.dart
frontend/: readme.txt
src/: App.tsx  main.tsx
src/Global/: newFeed.ts  userInfo.ts
src/components/: Layout.tsx  Login.tsx  Root.tsx  SignUp.tsx
src/components/CarFn/: AdventureCard.tsx  CarForm.tsx  SetAvaCarForm.tsx
src/components/IntroAnimation/: IntroAnimation.tsx  IntroAnimtaion.modules.css
src/components/Registration/: DriverRegistrationForm.tsx  PackageRegistrationForm.tsx
src/components/Root/: CarPostCard.tsx  PackagePostCard.tsx  types.ts
src/pages/: BottomMenu.tsx  CarFn.tsx  Layout.tsx  Login.tsx  Nav.tsx  Profile.tsx  Registration.tsx  Root.tsx  SignUp.tsx
src/routes/: Path.tsx
src/service/: api.ts
src/utils/: CustomDrawer.tsx  DrawerButton.tsx  Error.tsx  Notify.tsx  RouteGuard.tsx  useCustomNotification.tsx
trunk/: .env  App.tsx  app.json  babel.config.js  newfeed.json  package-lock.json  package.json  test.json
trunk/android/: settings.gradle
trunk/android/app/: build.gradle  google-services.json
trunk/ios/: Podfile
trunk/ios/trunk/: Info.plist
trunk/ios/trunk.xcodeproj/: project.pbxproj
trunk/src/api/: API_URL.ts  auth.ts  postCreate.ts
trunk/src/components/: Button.tsx  Comment.tsx  CustomButton.tsx  CustomDatePicker.tsx  CustomImagePicker.tsx  CustomInput.tsx  CustomMapContainer.tsx  CustomModal.tsx  CustomPasswordInput.tsx  CustomText.tsx  DatePicker.tsx  DatePickerLayout.tsx  GooglePlaceAutoCompleteInput.tsx  ImageContainer.tsx  ImageSlider.tsx  Layout.tsx  MapContainer.tsx  Segment.tsx  SlidePagination.tsx  TabBarIcon.tsx
trunk/src/components/Directions/: ChooseDesti.tsx  ChooseOrigin.tsx
trunk/src/config/: StatusLists.ts  connections.tsx  post_data.tsx  posts.tsx
trunk/src/constants/: mapStyle.ts  styles.tsx
trunk/src/hooks/: usePushNoti.tsx
trunk/src/layouts/: CustomLayout.tsx
trunk/src/router/: AuthStack.tsx  AuthenticatedStack.tsx  Navigation.tsx
trunk/src/screens/: CarStatusScreen.tsx  ChooseDestination.tsx  ConnectionScreen.tsx  LoginScreen.tsx  MapScreen.tsx  MenuScreen.tsx  NewFeedScreen.tsx  NotificationScreen.tsx  OnBoardingScreen.tsx  PackageDetailScreen.tsx  PasswordChangeScreen.tsx  PasswordForgotScreen.tsx  PostCreateScreen.tsx  PostDetailScreen.tsx  ProfileEditScreen.tsx  ProfileScreen.tsx  RegisterLoginScreen.tsx  SelfStatusScreen.tsx  SignupScreen.tsx  StatusDetail.tsx  StatusScreen.tsx
trunk/src/store/: locationStore.ts  locations.ts  userStore.ts
trunk/src/utils/: helper.tsx  types.ts
(+59 files in other folders)
