[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-web = { version = "4.8.0", features = ["rustls-0_23"] }
async_once = "0.2.6"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
futures-util = "0.3.30"
lazy_static = "1.4.0"
rustls = "0.23.11"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = "1.5.4"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
