[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6.5", default-features = false }
actix-web = { version = "4.4.1", default-features = false }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
jsonwebtoken = { version = "9.2.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
rust-argon2 = { version = "2.1.0", default-features = false }
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
surrealdb = { version = "1.1.1", default-features = false, features = ["kv-rocksdb"] }
