[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
enum_glob_use = 'deny'
pedantic = 'deny'
nursery = 'deny'

[profile.release]
strip = 'symbols'
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
actix-files = { version = "0.6.5" }
actix-web = { version = "4.4.1" }
async_once = "0.2.6"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
directories = "5.0.1"
jsonwebtoken = { version = "9.2.0" }
lazy_static = { version = "1.4.0" }
rand = "0.8.5"
rust-argon2 = { version = "2.1.0" }
serde = { version = "1.0.195", features = ["derive"] }
surrealdb = { version = "1.1.1", features = ["kv-rocksdb"] }
tokio = { version = "1.35.1", features = ["full"] }
