[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
enum_glob_use = 'deny'
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -2 }

[profile.release]
strip = 'symbols'
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[profile.speed]
inherits = "release"
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = { version = "4.4.1" }
async_once = "0.2.6"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
color-eyre = "0.6.3"
directories = "5.0.1"
dotenvy = "0.15.7"
image = "0.24.8"
jsonwebtoken = { version = "9.2.0" }
lazy_static = { version = "1.4.0" }
mime = "0.3.17"
rand = "0.8.5"
rust-argon2 = { version = "2.1.0" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
surrealdb = { version = "1.1.1", features = ["kv-rocksdb"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
